<?xml version="1.0"?>
<package>
  <name>gtec_roskfpos</name>
  <version>1.0.0</version>
  <description>GTEC Multi Sensors Indoor Positioning: KF</description>

  <maintainer email="valentin.barral@gtec.udc.es">Valentin Barral</maintainer>

  <license>MIT</license>
  <build_depend>gtec_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
